--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <h3>IDEAL JOB</h3>
 <p>
+<div class="content">
 <img src="job.jpg" alt="image of job description">
 </p>
 <p> As shown in the picture above, the job position is Web Designer, and what makes this job more interesting to me is the responsibilities and skills required to do each job. Some skills required to do the job are: Understanding of Web Designing, Working knowledge of social media, e-commerce and mobile web design.  On the other hand, with these skills the responsibilities are to Design concept for websites and email campaigns, update website imagery, copy and content, develop new design ideas for our websites and pro-activity develop new concepts and tools to communicate brand personality online, Design, build and deliver HTML email campaigns.  The company also provides a great team to work in, which helps getting into new work easy.</p>
